Added: Token EXCLUDE

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,3 +17,4 @@ jobs:
                   npm run release
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_BOT_TOKEN }}
+                  NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
