--- a/package.json
+++ b/package.json
@@ -51,6 +51,11 @@
                         "major"
                     ],
                     "commitMessageSuffix": "BREAKING"
+                },
+                {
+                    "packageNames": ["@socifi/rollup-config", "@socifi/babel-config"],
+                    "commitMessageSuffix": "",
+                    "stabilityDays": 0
                 }
             ],
             "prCreation": "not-pending",
