--- a/package.json
+++ b/package.json
@@ -1,94 +1,88 @@
 {
-    "name": "renovate-config-fabulator",
-    "version": "1.5.0",
-    "description": "Fabulator personal Renovate config present.",
-    "scripts": {
-        "test": "jest",
-        "lint": "eslint ./tests",
-        "release": "semantic-release"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/fabulator/renovate-config-fabulator.git"
-    },
-    "homepage": "https://github.com/fabulator/renovate-config-fabulator",
-    "keywords": [
-        "renovate",
-        "renovateconfig",
-        "renovate-config"
-    ],
-    "devDependencies": {
-        "@socifi/commitlint-config": "^1.1.0",
-        "@socifi/eslint-config": "^2.10.2",
-        "jest": "^26.0.1",
-        "renovate": "^20.2.3",
-        "semantic-release-config-fabulator": "^1.3.2"
-    },
-    "author": "Michal Ozogan <michal@ozogan.eu>",
-    "license": "MIT",
-    "renovate-config": {
-        "default": {
-            "extends": [
-                "config:base"
-            ],
-            "enabled": true,
-            "stabilityDays": 1,
-            "commitMessageAction": "Changed: Update",
-            "packageRules": [
-                {
-                    "depTypeList": [
-                        "dependencies"
-                    ],
-                    "updateTypes": [
-                        "patch"
-                    ],
-                    "commitMessageAction": "Fixed: Update"
-                },
-                {
-                    "depTypeList": [
-                        "devDependencies"
-                    ],
-                    "commitMessageTopic": "dev dependency {{depName}}",
-                    "commitMessageSuffix": "NO_RELEASE",
-                    "major": {
-                        "automerge": true
-                    }
-                },
-                {
-                    "depTypeList": [
-                        "dependencies"
-                    ],
-                    "updateTypes": [
-                        "major"
-                    ],
-                    "commitMessageSuffix": "BREAKING",
-                    "stabilityDays": 3
-                },
-                {
-                    "packageNames": [
-                        "@socifi/rollup-config",
-                        "@socifi/babel-config"
-                    ],
-                    "commitMessageSuffix": "",
-                    "stabilityDays": 0
-                }
-            ],
-            "prCreation": "not-pending",
-            "rangeStrategy": "update-lockfile",
-            "automerge": true,
-            "major": {
-                "automerge": false
-            },
-            "timezone": "Europe/Prague",
-            "schedule": [
-                "after 5am"
-            ],
-            "assignees": [
-                "fabulator"
-            ],
-            "reviewers": [
-                "fabulator"
-            ]
+  "name": "renovate-config-fabulator",
+  "version": "1.5.0",
+  "description": "Fabulator personal Renovate config present.",
+  "keywords": [
+    "renovate",
+    "renovateconfig",
+    "renovate-config"
+  ],
+  "homepage": "https://github.com/fabulator/renovate-config-fabulator",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fabulator/renovate-config-fabulator.git"
+  },
+  "license": "MIT",
+  "author": "Michal Ozogan <michal@ozogan.eu>",
+  "scripts": {
+    "lint": "eslint ./ --ext .js --ext .json",
+    "lint:fix": "npm run lint -- --fix",
+    "release": "semantic-release",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "commitlint-config-fabulator": "^1.0.0",
+    "eslint-config-fabulator": "^1.0.2",
+    "jest": "^26.1.0",
+    "renovate": "^22.3.1",
+    "semantic-release-config-fabulator": "^2.5.0"
+  },
+  "renovate-config": {
+    "default": {
+      "extends": [
+        "config:base"
+      ],
+      "enabled": true,
+      "stabilityDays": 1,
+      "commitMessageAction": "Changed: Update",
+      "packageRules": [
+        {
+          "depTypeList": [
+            "dependencies"
+          ],
+          "updateTypes": [
+            "minor",
+            "patch"
+          ],
+          "enabled": false
+        },
+        {
+          "depTypeList": [
+            "devDependencies"
+          ],
+          "commitMessageTopic": "dev dependency {{depName}}",
+          "commitMessageSuffix": "NO_RELEASE",
+          "major": {
+            "automerge": false
+          }
+        },
+        {
+          "depTypeList": [
+            "dependencies"
+          ],
+          "updateTypes": [
+            "major"
+          ],
+          "commitMessageSuffix": "BREAKING",
+          "stabilityDays": 3
         }
+      ],
+      "prCreation": "not-pending",
+      "rangeStrategy": "replace",
+      "automerge": false,
+      "major": {
+        "automerge": false
+      },
+      "timezone": "Europe/Prague",
+      "schedule": [
+        "after 5am"
+      ],
+      "assignees": [
+        "fabulator"
+      ],
+      "reviewers": [
+        "fabulator"
+      ]
     }
+  }
 }
