Fixed: Do the lock maintenence only one a week

--- a/package.json
+++ b/package.json
@@ -36,10 +36,7 @@
       "stabilityDays": 1,
       "commitMessageAction": "Changed: Update",
       "lockFileMaintenance": {
-        "enabled": true,
-        "schedule": [
-          "after 5am"
-        ]
+        "enabled": true
       },
       "packageRules": [
         {
