Fixed: Update lock file also.

--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
         }
       ],
       "prCreation": "not-pending",
-      "rangeStrategy": "replace",
+      "rangeStrategy": "update-lockfile",
       "automerge": false,
       "major": {
         "automerge": false
