Added: Dependency dashboard

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "renovate-config": {
     "default": {
       "extends": [
-        "config:base"
+        "config:base",
+        ":dependencyDashboard"
       ],
       "enabled": true,
       "stabilityDays": 1,
